--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Phozogy, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Phozogy | Template</title>
+    <title>Bellart</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Quantico:400,700&display=swap" rel="stylesheet">
@@ -35,9 +35,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="logo">
-                        <a href="./indexx.html">
-                            <img src="img/logo.png" alt="">
-                        </a>
+                        <img
+                  src="img/Neutral_And_Black_Minimalist_Aesthetic_Art_Gallery_Logo__1_-removebg-preview.png"
+                  alt="Bellart"/></a>
                     </div>
                     <nav class="nav-menu mobile-menu">
                         <ul>
