--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -66,7 +66,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="bo-links">
-                        <a href="./index.html"><i class="fa fa-home"></i> Home</a>
+                        <a href="./indexx.html"><i class="fa fa-home"></i> Home</a>
                         <span>Portfolio</span>
                     </div>
                 </div>
@@ -117,63 +117,63 @@
                         <div class="pf-item large-width set-bg natural" data-setbg="img/portfolio/pf-3.jpg">
                             <a href="img/portfolio/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
+                                <h4>Artworks</h4>
                                 <span>Fashion</span>
                             </div>
                         </div>
                         <div class="pf-item large-height set-bg wedding" data-setbg="img/portfolio/pf-4.jpg">
                             <a href="img/portfolio/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
+                                <h4>Artworks</h4>
                                 <span>Fashion</span>
                             </div>
                         </div>
                         <div class="pf-item set-bg lifestyle" data-setbg="img/portfolio/pf-7.jpg">
                             <a href="img/portfolio/pf-7.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
+                                <h4>Artworks</h4>
                                 <span>Fashion</span>
                             </div>
                         </div>
                         <div class="pf-item set-bg natural" data-setbg="img/portfolio/pf-8.jpg">
                             <a href="img/portfolio/pf-8.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
+                                <h4>Artworks</h4>
                                 <span>Fashion</span>
                             </div>
                         </div>
                         <div class="pf-item set-bg videos" data-setbg="img/portfolio/pf-5.jpg">
                             <a href="img/portfolio/pf-5.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
+                                <h4>Artworks</h4>
                                 <span>Fashion</span>
                             </div>
                         </div>
                         <div class="pf-item set-bg fashion" data-setbg="img/portfolio/pf-6.jpg">
                             <a href="img/portfolio/pf-6.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
+                                <h4>Artworks</h4>
                                 <span>Fashion</span>
                             </div>
                         </div>
                         <div class="pf-item large-width set-bg videos" data-setbg="img/portfolio/pf-10.jpg">
                             <a href="img/portfolio/pf-10.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
+                                <h4>Artworks</h4>
                                 <span>Fashion</span>
                             </div>
                         </div>
                         <div class="pf-item set-bg fashion" data-setbg="img/portfolio/pf-11.jpg">
                             <a href="img/portfolio/pf-11.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
+                                <h4>Artworks</h4>
                                 <span>Fashion</span>
                             </div>
                         </div>
                         <div class="pf-item large-width large-height set-bg wedding" data-setbg="img/portfolio/pf-9.jpg">
                             <a href="img/portfolio/pf-9.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
+                                <h4>Artworks</h4>
                                 <span>Fashion</span>
                             </div>
                         </div>
