--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -100,8 +100,8 @@
             <div class="row">
                 <div class="col-lg-12 p-0">
                     <div class="portfolio-filter">
-                        <div class="pf-item set-bg fashion" data-setbg="img/portfolio/pf-10.jpg">
-                            <a href="img/portfolio/af-1.jpeg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item set-bg fashion" data-setbg="img/portfolio/af-6.jpg">
+                            <a href="img/portfolio/af-6.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Artworks</h4>
                                 <span>Bellart</span>
@@ -227,8 +227,8 @@
                         </ul>
                         <ul>
                             <li><a href="#">Gallery</a></li>
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Artworks</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                 </div>
