Ndryshime ne Indexx tek portofolio side

--- a/phozogy-master/indexx.html
+++ b/phozogy-master/indexx.html
@@ -53,7 +53,7 @@
                 <li><a href="./about.html">Kush jemi</a></li>
                 <li><a href="./services.html">Sherbimet</a></li>
 
-                <li><a href="./portfolio.html">Piktura</a></li>
+                <li><a href="./Artworks.html">Artworks</a></li>
 
                 <li><a href="./contact.html">Contact</a></li>
               </ul>
@@ -230,7 +230,7 @@
     </section>
     <!-- Categories Section End -->
 
-    <!-- Portfolio Section Begin -->
+    <!-- Portfolio Section Begin  Pjesa ku merret Mario Me Ndryshimet -->
     <section class="portfolio-section spad">
       <div class="container">
         <div class="row">
@@ -263,8 +263,8 @@
                   ><span class="icon_plus"></span
                 ></a>
                 <div class="pf-text">
-                  <h4>COLORS SPEAK</h4>
-                  <span>Fashion</span>
+                  <h4>Artworks</h4>
+                  <span>Bellart</span>
                 </div>
               </div>
               <div
@@ -275,8 +275,8 @@
                   ><span class="icon_plus"></span
                 ></a>
                 <div class="pf-text">
-                  <h4>COLORS SPEAK</h4>
-                  <span>Fashion</span>
+                  <h4>Artworks</h4>
+                  <span>Bellart</span>
                 </div>
               </div>
               <div
@@ -287,8 +287,8 @@
                   ><span class="icon_plus"></span
                 ></a>
                 <div class="pf-text">
-                  <h4>COLORS SPEAK</h4>
-                  <span>Fashion</span>
+                  <h4>Artworks</h4>
+                  <span>Bellart</span>
                 </div>
               </div>
               <div
@@ -299,8 +299,8 @@
                   ><span class="icon_plus"></span
                 ></a>
                 <div class="pf-text">
-                  <h4>COLORS SPEAK</h4>
-                  <span>Fashion</span>
+                  <h4>Artworks</h4>
+                  <span>Bellart</span>
                 </div>
               </div>
               <div
@@ -311,8 +311,8 @@
                   ><span class="icon_plus"></span
                 ></a>
                 <div class="pf-text">
-                  <h4>COLORS SPEAK</h4>
-                  <span>Fashion</span>
+                  <h4>Artworks</h4>
+                  <span>Bellart</span>
                 </div>
               </div>
               <div
@@ -323,8 +323,8 @@
                   ><span class="icon_plus"></span
                 ></a>
                 <div class="pf-text">
-                  <h4>COLORS SPEAK</h4>
-                  <span>Fashion</span>
+                  <h4>Artworks</h4>
+                  <span>Bellart</span>
                 </div>
               </div>
               <div
@@ -335,8 +335,8 @@
                   ><span class="icon_plus"></span
                 ></a>
                 <div class="pf-text">
-                  <h4>COLORS SPEAK</h4>
-                  <span>Fashion</span>
+                  <h4>Artworks</h4>
+                  <span>Bellart</span>
                 </div>
               </div>
               <div
@@ -347,8 +347,8 @@
                   ><span class="icon_plus"></span
                 ></a>
                 <div class="pf-text">
-                  <h4>COLORS SPEAK</h4>
-                  <span>Fashion</span>
+                  <h4>Artworks</h4>
+                  <span>Bellart</span>
                 </div>
               </div>
               <div
@@ -359,8 +359,8 @@
                   ><span class="icon_plus"></span
                 ></a>
                 <div class="pf-text">
-                  <h4>COLORS SPEAK</h4>
-                  <span>Fashion</span>
+                  <h4>Artworks</h4>
+                  <span>Bellart</span>
                 </div>
               </div>
               <div
@@ -371,8 +371,8 @@
                   ><span class="icon_plus"></span
                 ></a>
                 <div class="pf-text">
-                  <h4>COLORS SPEAK</h4>
-                  <span>Fashion</span>
+                  <h4>Artworks</h4>
+                  <span>Bellart</span>
                 </div>
               </div>
               <div
@@ -383,8 +383,8 @@
                   ><span class="icon_plus"></span
                 ></a>
                 <div class="pf-text">
-                  <h4>COLORS SPEAK</h4>
-                  <span>Fashion</span>
+                  <h4>Artworks</h4>
+                  <span>Bellart</span>
                 </div>
               </div>
             </div>
@@ -440,8 +440,8 @@
               </ul>
               <ul>
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="#">Artworks</a></li>
+                <li><a href="#">ContactUS</a></li>
               </ul>
             </div>
           </div>
