update per indexx dhe per artworks in

--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -195,7 +195,7 @@
                     <div class="fs-about">
                         <div class="fa-logo">
                             <a href="#">
-                                <img src="img/f-logo.png" alt="">
+                                <img src="img/Neutral_And_Black_Minimalist_Aesthetic_Art_Gallery_Logo__1_-removebg-preview.png" alt="">
                             </a>
                         </div>
                         <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
