--- a/phozogy-master/indexx.html
+++ b/phozogy-master/indexx.html
@@ -49,7 +49,7 @@
             </div>
             <nav class="nav-menu mobile-menu">
               <ul>
-                <li class="active"><a href="./index.html">Home</a></li>
+                <li class="active"><a href="./indexx.html">Home</a></li>
                 <li><a href="./services.html">Events</a></li>
 
                 <li><a href="./portfolio.html">Artworks</a></li>
