--- a/phozogy-master/indexx.html
+++ b/phozogy-master/indexx.html
@@ -49,11 +49,10 @@
             </div>
             <nav class="nav-menu mobile-menu">
               <ul>
-                <li class="active"><a href="./index.html">Kryefaqe</a></li>
-                <li><a href="./about.html">Kush jemi</a></li>
-                <li><a href="./services.html">Sherbimet</a></li>
+                <li class="active"><a href="./index.html">Home</a></li>
+                <li><a href="./services.html">Events</a></li>
 
-                <li><a href="./portfolio.html">Piktura</a></li>
+                <li><a href="./portfolio.html">Artworks</a></li>
 
                 <li><a href="./contact.html">Contact</a></li>
               </ul>
@@ -241,11 +240,11 @@
             <div class="filter-controls">
               <ul>
                 <li class="active" data-filter="*">All</li>
-                <li data-filter=".fashion">Fashion</li>
-                <li data-filter=".lifestyle">Lifestyle</li>
+                <li data-filter=".fashion">Portraits</li>
+                <li data-filter=".lifestyle">Classic</li>
                 <li data-filter=".natural">Natural</li>
-                <li data-filter=".wedding">Wedding</li>
-                <li data-filter=".videos">Videos</li>
+                <li data-filter=".wedding">Canva</li>
+                <li data-filter=".videos">Digital</li>
               </ul>
             </div>
           </div>
@@ -405,7 +404,10 @@
             <div class="fs-about">
               <div class="fa-logo">
                 <a href="#">
-                  <img src="img/f-logo.png" alt="" />
+                  <img
+                    src="img/Neutral_And_Black_Minimalist_Aesthetic_Art_Gallery_Logo__1_-removebg-preview.png"
+                    alt=""
+                  />
                 </a>
               </div>
               <p>
@@ -462,17 +464,7 @@
           </div>
           <div class="col-lg-12">
             <div class="copyright-text">
-              <p>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                Copyright &copy;
-                <script>
-                  document.write(new Date().getFullYear());
-                </script>
-                All rights reserved | This template is made with
-                <i class="fa fa-heart" aria-hidden="true"></i> by
-                <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              </p>
+              copyright &copy; 2024 All rights mariolaureta
             </div>
           </div>
         </div>
