ndryshime ne portfolio per ti hedhur ne artwokrs

--- a/phozogy-master/portfolio.html
+++ b/phozogy-master/portfolio.html
@@ -179,7 +179,7 @@ Nga ktu fillojne fotot
         <a href="#">Load More</a>
     </div>
 </section>
-<!-- Portfolio Section End -->
+<!-- Portfolio Section End 1-->
 
 <!-- Footer Section Begin -->
 <footer class="footer-section">
