--- a/phozogy-master/portfolio.html
+++ b/phozogy-master/portfolio.html
@@ -94,57 +94,57 @@ Nga ktu fillojne fotot
         <div class="row">
             <div class="col-lg-12 p-0">
                 <div class="portfolio-filter">
-                    <div class="pf-item set-bg Sculptures" data-setbg="img/portfolio/af-1.jpeg">
-                        <a href="img/portfolio/af-1.jpeg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                    <div class="pf-item set-bg Piktura" data-setbg="img/Artworks/painintgs4.jpg">
+                        <a href="img/Artworks/painintgs4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                         <div class="pf-text">
                             <h4>Artworks</h4>
                             <span>Bellart</span>
                         </div>
                     </div>
-                    <div class="pf-item set-bg History" data-setbg="img/portfolio/af-5.jpg">
-                        <a href="img/portfolio/af-5.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                    <div class="pf-item set-bg Piktura" data-setbg="img/Artworks/painintgs4.jpg">
+                        <a href="img/Artworks/painintgs4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                         <div class="pf-text">
                             <h4>Artworks</h4>
                             <span>Bellart</span>
                         </div>
                     </div>
-                    <div class="pf-item set-bg natural" data-setbg="img/portfolio/pf-3.jpg">
-                        <a href="img/portfolio/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                    <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura.jpg">
+                        <a href="img/Artworks/skulptura.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                         <div class="pf-text">
                             <h4>Artworks</h4>
                             <span>Bellart</span>
                         </div>
                     </div>
-                    <div class="pf-item set-bg wedding" data-setbg="img/portfolio/pf-4.jpg">
-                        <a href="img/portfolio/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                    <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura.jpg">
+                        <a href="img/Artworks/skulptura.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                         <div class="pf-text">
                             <h4>Artworks</h4>
                             <span>Bellart</span>
                         </div>
                     </div>
-                    <div class="pf-item set-bg lifestyle" data-setbg="img/portfolio/pf-7.jpg">
-                        <a href="img/portfolio/pf-7.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                    <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura.jpg">
+                        <a href="img/Artworks/skulptura.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                         <div class="pf-text">
                             <h4>Artworks</h4>
                             <span>Bellart</span>
                         </div>
                     </div>
-                    <div class="pf-item set-bg natural" data-setbg="img/portfolio/pf-8.jpg">
-                        <a href="img/portfolio/pf-8.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                    <div class="pf-item set-bg Paintings" data-setbg="img/Artworks/paintings2.jpg">
+                        <a href="img/Artworks/paintings2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                         <div class="pf-text">
                             <h4>Artworks</h4>
                             <span>Bellart</span>
                         </div>
                     </div>
-                    <div class="pf-item set-bg videos" data-setbg="img/portfolio/pf-5.jpg">
-                        <a href="img/portfolio/pf-5.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                    <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura1.jpg">
+                        <a href="img/Artworks/skulptura1.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                         <div class="pf-text">
                             <h4>Artworks</h4>
                             <span>Bellart</span>
                         </div>
                     </div>
-                    <div class="pf-item set-bg fashion" data-setbg="img/portfolio/pf-6.jpg">
-                        <a href="img/portfolio/pf-6.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                    <div class="pf-item set-bg Paintings" data-setbg="img/Artworks/paintings2.jpg">
+                        <a href="img/Artworks/paintings2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                         <div class="pf-text">
                             <h4>Artworks</h4>
                             <span>Bellart</span>
