--- a/phozogy-master/portfolio.html
+++ b/phozogy-master/portfolio.html
@@ -112,7 +112,7 @@ Nga ktu fillojne fotot
                         <a href="img/Artworks/skulptura.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                         <div class="pf-text">
                             <h4>Artworks</h4>
-                            <span>Bellart</span>
+                            <span>Bellart1</span>
                         </div>
                     </div>
                     <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura.jpg">
