update tek artworks -i

--- a/phozogy-master/portfolio.html
+++ b/phozogy-master/portfolio.html
@@ -94,15 +94,15 @@ Nga ktu fillojne fotot
         <div class="row">
             <div class="col-lg-12 p-0">
                 <div class="portfolio-filter">
-                    <div class="pf-item set-bg Piktura" data-setbg="img/Artworks/painintgs4.jpg">
-                        <a href="img/Artworks/painintgs4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                    <div class="pf-item set-bg Piktura" data-setbg="img/Artworks/paintings1.jpg">
+                        <a href="img/Artworks/paintings1.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                         <div class="pf-text">
                             <h4>Artworks</h4>
                             <span>Bellart</span>
                         </div>
                     </div>
-                    <div class="pf-item set-bg Piktura" data-setbg="img/Artworks/painintgs4.jpg">
-                        <a href="img/Artworks/painintgs4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                    <div class="pf-item set-bg Piktura" data-setbg="img/Artworks/paintings2.jpg">
+                        <a href="img/Artworks/paintings2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                         <div class="pf-text">
                             <h4>Artworks</h4>
                             <span>Bellart</span>
@@ -115,15 +115,29 @@ Nga ktu fillojne fotot
                             <span>Bellart1</span>
                         </div>
                     </div>
-                    <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura.jpg">
-                        <a href="img/Artworks/skulptura.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                    <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura1.jpg">
+                        <a href="img/Artworks/skulptura1.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                         <div class="pf-text">
                             <h4>Artworks</h4>
                             <span>Bellart</span>
                         </div>
                     </div>
-                    <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura.jpg">
-                        <a href="img/Artworks/skulptura.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                    <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura2.jpg">
+                        <a href="img/Artworks/skulptura2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-text">
+                            <h4>Artworks</h4>
+                            <span>Bellart</span>
+                        </div>
+                    </div>
+                    <div class="pf-item set-bg Paintings" data-setbg="img/Artworks/paintings3.jpg">
+                        <a href="img/Artworks/paintings3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-text">
+                            <h4>Artworks</h4>
+                            <span>Bellart</span>
+                        </div>
+                    </div>
+                    <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura2.jpg">
+                        <a href="img/Artworks/skulptura2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                         <div class="pf-text">
                             <h4>Artworks</h4>
                             <span>Bellart</span>
@@ -134,6 +148,69 @@ Nga ktu fillojne fotot
                         <div class="pf-text">
                             <h4>Artworks</h4>
                             <span>Bellart</span>
+                        </div>
+                    </div>
+                    <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura2.jpg">
+                        <a href="img/Artworks/skulptura2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-text">
+                            <h4>Artworks</h4>
+                            <span>Bellart</span>
+                        </div>
+                    </div>
+                    <div class="pf-item set-bg Paintings" data-setbg="img/Artworks/paintings3.jpg">
+                        <a href="img/Artworks/paintings3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-text">
+                            <h4>Artworks</h4>
+                            <span>Bellart</span>
+                        </div>
+                    </div>
+                    <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura2.jpg">
+                        <a href="img/Artworks/skulptura2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-text">
+                            <h4>Artworks</h4>
+                            <span>Bellart</span>
+                        </div>
+                    </div>
+                    <div class="pf-item set-bg Paintings" data-setbg="img/Artworks/paintings2.jpg">
+                        <a href="img/Artworks/paintings2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-text">
+                            <h4>Artworks</h4>
+                            <span>Bellart</span>
+                        </div>
+                    </div>
+                    <div class="pf-item set-bg Paintings" data-setbg="img/Artworks/paintings3.jpg">
+                        <a href="img/Artworks/paintings3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-text">
+                            <h4>Artworks</h4>
+                            <span>Bellart</span>
+                        </div>
+                    </div>
+                    <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura2.jpg">
+                        <a href="img/Artworks/skulptura2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-text">
+                            <h4>Artworks</h4>
+                            <span>Bellart</span>
+                        </div>
+                    </div>
+                    <div class="pf-item set-bg Paintings" data-setbg="img/Artworks/paintings2.jpg">
+                        <a href="img/Artworks/paintings2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-text">
+                            <h4>Artworks</h4>
+                            <span>Bellart</span>
+                        </div>
+                    </div>
+                    <div class="pf-item set-bg Piktura" data-setbg="img/Artworks/paintings2.jpg">
+                        <a href="img/Artworks/paintings2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-text">
+                            <h4>Artworks</h4>
+                            <span>Bellart</span>
+                        </div>
+                    </div>
+                    <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura.jpg">
+                        <a href="img/Artworks/skulptura.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-text">
+                            <h4>Artworks</h4>
+                            <span>Bellart1</span>
                         </div>
                     </div>
                     <div class="pf-item set-bg Sculptures" data-setbg="img/Artworks/skulptura1.jpg">
@@ -143,41 +220,11 @@ Nga ktu fillojne fotot
                             <span>Bellart</span>
                         </div>
                     </div>
-                    <div class="pf-item set-bg Paintings" data-setbg="img/Artworks/paintings2.jpg">
-                        <a href="img/Artworks/paintings2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                        <div class="pf-text">
-                            <h4>Artworks</h4>
-                            <span>Bellart</span>
-                        </div>
-                    </div>
-                    <div class="pf-item set-bg videos" data-setbg="img/portfolio/pf-10.jpg">
-                        <a href="img/portfolio/pf-10.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                        <div class="pf-text">
-                            <h4>Artworks</h4>
-                            <span>Bellart</span>
-                        </div>
-                    </div>
-                    <div class="pf-item set-bg fashion" data-setbg="img/portfolio/pf-11.jpg">
-                        <a href="img/portfolio/pf-11.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                        <div class="pf-text">
-                            <h4>Artworks</h4>
-                            <span>Bellart</span>
-                        </div>
-                    </div>
-                    <div class="pf-item set-bg wedding" data-setbg="img/portfolio/pf-9.jpg">
-                        <a href="img/portfolio/pf-9.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
-                        <div class="pf-text">
-                            <h4>Artworks</h4>
-                            <span>Bellart</span>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="load-more-btn portfolio-btn">
-        <a href="#">Load More</a>
-    </div>
+
 </section>
 <!-- Portfolio Section End 1-->
 
@@ -270,22 +317,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="js/jquery.slicknav.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 
 
