--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Phozogy, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Phozogy | Template</title>
+    <title>BellART-Artworks</title>
 
     <!-- Google Font ggg-->
     <link href="https://fonts.googleapis.com/css?family=Quantico:400,700&display=swap" rel="stylesheet">
@@ -252,9 +252,7 @@ Nga ktu fillojne fotot
                 <div class="fs-widget">
                     <h5>Instagram</h5>
                     <div class="fw-instagram">
-                        <img src="img/instagram/insta-1.jpg" alt="">
-                        <img src="img/instagram/insta-2.jpg" alt="">
-                        <img src="img/instagram/insta-3.jpg" alt="">
+                        <img src="img/Artworks/instaicon.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -297,16 +295,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 </footer>
 <!-- Footer Section End -->
 
-<!-- Search model Begin -->
-<div class="search-model">
-    <div class="h-100 d-flex align-items-center justify-content-center">
-        <div class="search-close-switch">+</div>
-        <form class="search-model-form">
-            <input type="text" id="search-input" placeholder="Search here.....">
-        </form>
-    </div>
-</div>
-<!-- Search model end -->
+
 
 <!-- Js Plugins -->
 <script src="js/jquery-3.3.1.min.js"></script>
