--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -241,8 +241,8 @@ Nga ktu fillojne fotot
                     </div>
                     <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <div class="fa-social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/"><i class="fa fa-twitter"></i></a>
                         <a href="#"><i class="fa fa-youtube-play"></i></a>
                         <a href="#"><i class="fa fa-instagram"></i></a>
                     </div>
@@ -252,7 +252,7 @@ Nga ktu fillojne fotot
                 <div class="fs-widget">
                     <h5>Instagram</h5>
                     <div class="fw-instagram">
-                        <img src="img/Artworks/instaicon.jpg" alt="">
+                     <img src="img/Artworks/instaicon.jpg" alt="Instagram">
                     </div>
                 </div>
             </div>
@@ -260,21 +260,21 @@ Nga ktu fillojne fotot
                 <div class="fs-widget">
                     <h5>Quick links</h5>
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="indexx.html">Home</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <ul>
                         <li><a href="#">Gallery</a></li>
-                        <li><a href="#">Artworks</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="Artworks.html">Artworks</a></li>
+                        
                     </ul>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="fs-widget">
                     <h5>Subscribe</h5>
-                    <p>Imolor amet consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <p>For more news Subscribe below</p>
                     <div class="fw-subscribe">
                         <form action="#">
                             <input type="text" placeholder="Email">
