--- a/phozogy-master/about.html
+++ b/phozogy-master/about.html
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="logo">
-                        <a href="./index.html">
+                        <a href="./indexx.html">
                             <img src="img/logo.png" alt="">
                         </a>
                     </div>
