--- a/phozogy-master/contact.html
+++ b/phozogy-master/contact.html
@@ -35,23 +35,24 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="logo">
-                        <a href="./index.html">
+                        <a href="./indexx.html">
                             <img src="img/logo.png" alt="">
                         </a>
                     </div>
                     <nav class="nav-menu mobile-menu">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about.html">About</a></li>
+                            <li><a href="./indexx.html">Home</a></li>
                             <li><a href="./services.html">Services</a></li>
-                            <li><a href="./pricing.html">Pricing</a></li>
-                            <li><a href="./portfolio.html">Portfolio</a></li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="#">Pages</a>
+                            <li><a href="./Artworks.html">Artworks</a></li>
+                            
+                            <li><a href="">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./gallery.html">Gallery</a></li>
-                                    <li><a href="./portfolio-details.html">Portfolio Details</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
+                                    <li><a href="./indexx.html">Home</a></li>
+                                    <li><a href="./services.html">Services</a></li>
+                                    <li><a href="./Artworks.html">Artworks</a></li>
+                                    <li><a href="./blog.html">Blog</a></li>
+                                   
                                 </ul>
                             </li>
                             <li class="active"><a href="./contact.html">Contact</a></li>
