--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Phozogy Template">
-    <meta name="keywords" content="Phozogy, unica, creative, html">
+    <meta name="description" content="Artworks">
+    <meta name="keywords" content="Artworks, great, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BellART-Artworks</title>
