update me fixes

--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -38,11 +38,9 @@
                         <ul>
                             <li><a href="./indexx.html">Home</a></li>
                             <li><a href="./services.html">Events</a></li>
-                            <li class="active"><a href="./Artworks.html">Artworks</a></li><!-- Kte do e bejm rename ARTWORKS-->
+                            <li class="active"><a href="./Artworks.html">Artworks</a></li>
                             <li><a href="./about.html">Contact</a></li> <!-- About in do ta vejm brenda Contactit -->
-                            </ul>
-                            </li>
-                        </ul>
+                            </ul>           
                     </nav>
                     <div id="mobile-menu-wrap"></div>
                 </div>
