--- a/phozogy-master/indexx.html
+++ b/phozogy-master/indexx.html
@@ -52,7 +52,7 @@
                 <li class="active"><a href="./indexx.html">Home</a></li>
                 <li><a href="./services.html">Events</a></li>
                 <li><a href="./Artworks.html">Artworks</a></li>
-                <li><a href="./about.html"></a>About </li>
+                <li><a href="./about.html">About</li>
                 <li><a href="./contact.html">Contact</a></li>
               </ul>
             </nav>
