update per about nga Mario

--- a/phozogy-master/about.html
+++ b/phozogy-master/about.html
@@ -41,21 +41,11 @@
                     </div>
                     <nav class="nav-menu mobile-menu">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./indexx.html">Home</a></li>
                             <li class="active"><a href="./about.html">About</a></li>
                             <li><a href="./services.html">Services</a></li>
-                            <li><a href="./pricing.html">Pricing</a></li>
-                            <li><a href="./portfolio.html">Portfolio</a></li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./gallery.html">Gallery</a></li>
-                                    <li><a href="./portfolio-details.html">Portfolio Details</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
+                            <li><a href="./Artworks.html">Artworks</a></li>
                                 </ul>
-                            </li>
-                            <li><a href="./contact.html">Contact</a></li>
-                        </ul>
                     </nav>
                     <div class="top-search search-switch">
                         <i class="fa fa-search"></i>
