--- a/phozogy-master/contact.html
+++ b/phozogy-master/contact.html
@@ -44,15 +44,7 @@
                             <li><a href="./indexx.html">Home</a></li>
                             <li><a href="./services.html">Services</a></li>
                             <li><a href="./Artworks.html">Artworks</a></li>
-                            
-                            <li><a href="">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./gallery.html">Gallery</a></li>
-                                    <li><a href="./indexx.html">Home</a></li>
-                                    <li><a href="./services.html">Services</a></li>
-                                    <li><a href="./Artworks.html">Artworks</a></li>
-                                    <li><a href="./blog.html">Blog</a></li>
-                                   
+                            <li><a href="./contact.html">ContactUS</a></li>                                   
                                 </ul>
                             </li>
                             <li class="active"><a href="./contact.html">Contact</a></li>
