events qeka services.html

--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -37,7 +37,7 @@
                     <nav class="nav-menu mobile-menu">
                         <ul>
                             <li><a href="./indexx.html">Home</a></li>
-                            <li><a href="./services.html">Events</a></li>
+                            <li><a href="./services.html">Events</a></li><!-- Events nfakt eshte services -->
                             <li class="active"><a href="./Artworks.html">Artworks</a></li>
                             <li><a href="./about.html">Contact</a></li> <!-- About in do ta vejm brenda Contactit -->
                             </ul>           
