--- a/phozogy-master/about.html
+++ b/phozogy-master/about.html
@@ -43,7 +43,7 @@
                         <ul>
                             <li><a href="./indexx.html">Home</a></li>
                             <li class="active"><a href="./about.html">About</a></li>
-                            <li><a href="./services.html">Services</a></li>
+                            <li><a href="./services.html">Events</a></li><!-- Events nfakt eshte services -->
                             <li><a href="./Artworks.html">Artworks</a></li>
                                 </ul>
                     </nav>
