--- a/phozogy-master/indexx.html
+++ b/phozogy-master/indexx.html
@@ -50,7 +50,7 @@
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li class="active"><a href="./indexx.html">Home</a></li>
-                <li><a href="./services.html">Events</a></li>
+                <li><a href="./services.html">Events</a></li><!-- Events nfakt eshte services -->
                 <li><a href="./Artworks.html">Artworks</a></li>
                 <li><a href="./about.html">About</li>
                 <li><a href="./contact.html">Contact</a></li>
