--- a/phozogy-master/indexx.html
+++ b/phozogy-master/indexx.html
@@ -50,8 +50,9 @@
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li class="active"><a href="./indexx.html">Home</a></li>
-                <li><a href="./services.html">Events</a></li>
+
                 <li><a href="./Artworks.html">Artworks</a></li>
+                <li><a href="./services.html">Events</a></li>
 
                 <li><a href="./contact.html">Contact</a></li>
               </ul>
@@ -184,7 +185,7 @@
           <div class="cs-item">
             <div
               class="cs-pic set-bg"
-              data-setbg="img/categories/cat-2.jpg"
+              data-setbg="img/categories/cat-2.jp"
             ></div>
             <div class="cs-text">
               <h4>Natural</h4>
@@ -468,10 +469,6 @@
       </div>
     </footer>
     <!-- Footer Section End -->
-
-    <!-- Search model Begin -->
-
-    <!-- Search model end -->
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
